--- a/JM/JM/MainWindow.xaml
+++ b/JM/JM/MainWindow.xaml
@@ -73,10 +73,23 @@
                 <TextBlock  Grid.Column="1" Grid.Row="1" Text="{Binding CurrentJuiceMachine.MaxCapacity}" Grid.ColumnSpan="2"></TextBlock>
             </Grid>
             <TextBlock Text="Ingredience:" Margin="0,10,0,0"/>
-            <ListBox>
-                <ListBoxItem Content="banana  0,5"/>
-                <ListBoxItem Content="milk  0,5"/>
-            </ListBox>
+            <ListView ItemsSource="{Binding CurrentJuiceMachine.Ingridients, Mode=TwoWay}" HorizontalContentAlignment="Stretch">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="{Binding Code}" Grid.Column="1"/>
+                            <Image Source="{Binding Icon}" Grid.Column="0" Height="32" Width="32"/>
+                            <TextBlock Text="{Binding DefaultSize}" Grid.Column="2" TextAlignment="Right" />
+
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackPanel>
     </Grid>
 </Window>
